--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 .main {
   padding: 10px;
+  position: relative;
 }
 
 /* LEFT SIDE OF THE WEBSITE */
@@ -72,7 +73,6 @@ body {
   width: 160px;
   margin-left: 10px;
   height: 3px;
-  position: relative;
   background-color: rgb(5, 5, 59);
 }
 
@@ -124,8 +124,8 @@ img {
   width: 600px;
   height: 480px;
   float: right;
-  position: relative;
-  left: -230px;
+  position: absolute;
+  left: 500px;
   padding: 20px 0 20px 20px;
   margin-top: -550px;
 }
